# dpestool

./:  setup.py  functions.py  pst.py  pyproject.toml
examples/wheat/ceres/: SWSW7501WH_N_RESPONSE.ipynb
wheat/: overview.py  plantgro.py
wheat/ceres/: OVERVIEW.ins  PlantGro.ins  cul.py  eco.py
wheat/utils/: uplantgro.py
